syntax = "proto3";

package awesome.v1;

import "google/api/annotations.proto";
import "awesome/v1/messages/report.proto";

enum Privacy {
  PRIVACY_UNSPECIFIED = 0;
  PRIVACY_NONE = 1;
  PRIVACY_HIGH = 2;
}

message FindReportByPetNameRequest {
  string pet_name = 1;
}
message FindReportByPetNameResponse {
  awesome.v1.messages.Report report = 1;
  Privacy privacy = 2;
}

service AwesomeService {

  rpc FindReportByPetName(FindReportByPetNameRequest) returns (FindReportByPetNameResponse) {
    option (google.api.http) = {
      get : "/v1/awesomes/{pet_name}"
    };
  };
}